:bug: fix; corrected searchBar display on smaller screens; adjusted accordion and ItemDetailPage for more professional UI experience

--- a/src/components/navbar/navbar.styles.scss
+++ b/src/components/navbar/navbar.styles.scss
@@ -63,3 +63,7 @@ h2 {
   }
 }
 }
+
+.border{
+  width: 100%;
+}
