--- a/src/components/searchBar/searchBar.styles.scss
+++ b/src/components/searchBar/searchBar.styles.scss
@@ -1,25 +1,28 @@
 .searchBarContain{
   display: flex;
-  width: 80%;
+  // width: 80%;
   justify-content: right;
   margin: 5px 10px 5px 0;
   
   
   .searchBar{
+    flex-direction: row;
     border: 1px solid;
     border-radius: 30px;
-    width: 200px;
+    width: 150px;
     
     button{
-      width: 30px;
+      width: 15%;
       border-radius: 50%;
       border: none;
       border-right: none;
       background-color: white;
+      margin: 0 5px 0 0;
     }
     
     input{
-      margin: 5px 0;
+      width: 75%;
+      margin: 5px 5px 5px 0;
       border: none;
       
       &:focus {
